# oddsorbit

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.base.json
.test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-DbubAajysjXuZUBqARc9bcnxjCwr9FJs6FABodDdmGfS.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
.test-ledger/accounts/run/: 0.5  100.6  26.3  29.2
.test-ledger/accounts/snapshot/100/: 18.4  30.1  76.0
.test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1777424804829711  MANIFEST-000021  OPTIONS-000027  OPTIONS-000029
.test-ledger/snapshots/100/: 100  obsolete_accounts  status_cache
.test-ledger/snapshots/100/accounts_hardlinks/: account_path_0
apps/web/: .env.example  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  env.ts  main.tsx
apps/web/src/components/layout/: Header.tsx
apps/web/src/hooks/: useMarkets.ts  usePositions.ts
apps/web/src/lib/: solana.ts
apps/web/src/providers/: WalletProvider.tsx  index.tsx
apps/web/src/routes/: CreateMarketPage.tsx  MarketDetailPage.tsx  MarketsPage.tsx  PortfolioPage.tsx
programs/prediction-market/: Cargo.toml
programs/prediction-market/src/: errors.rs  events.rs  lib.rs
programs/prediction-market/src/instructions/: buy_shares.rs  claim_winnings.rs  create_market.rs  mod.rs  resolve_market.rs  sell_shares.rs
programs/prediction-market/src/state/: market.rs  mod.rs
scripts/: dev-local.sh  setup-localnet.ts
(+5 files in other folders)
